<resources>
    <string name="app_name">Devices Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="core">Core %d</string>
    <string name="nav_devices">Devices Info</string>
    <string name="nav_system">System Info</string>
    <string name="nav_cpu">CPU Info</string>
    <string name="nav_gov">Governor</string>
    <string name="nav_rom">ROM</string>
    <string name="nav_share">Share</string>
    <string name="nav_bug_report">Bugs Report</string>
    <string name="hiepth_email">hieptran.bka@gmail.com</string>
    <string name="default_view_text">Updating..</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">Ok</string>
    <string name="press_back_again">Press back again to leave</string>
    <string name="more">More</string>
    <string name="pif_devices">Device </string>
    <string name="pif_system">System </string>
    <string name="pif_tel">Telephony </string>
    <string name="pif_wifi">Wifi </string>
    <string name="pif_bat">Battery </string>
    <string name="pif_cpu">CPU </string>
    <string name="dv_model">Model</string>
    <string name="dv_manufacturer">Manufacturer</string>
    <string name="dv_board">Board</string>
    <string name="dv_hardware">Hardware</string>
    <string name="dv_scrsize">Screen Size</string>
    <string name="dv_scrdst">Screen Density</string>
    <string name="dv_avairam">Available RAM</string>
    <string name="dv_totalram">Total RAM</string>
    <string name="dv_totalstorage">Total Storage</string>
    <string name="dv_avaistor">Available Storage</string>
    <string name="os_ver">OS Version</string>
    <string name="os_release">Release</string>
    <string name="os_sdk">SDK</string>
    <string name="tmp_str">Test</string>
    <string name="cpu_load">CPU Load</string>
    <string name="mhz">MHz</string>
    <string name="offline">Offline</string>
    <string name="waiting_for_init">Waiting for init ...</string>
    <string name="nav_setting">Setting</string>
    <string name="set_on_boot_lable">Set on boot</string>
    <string name="deep_sleep">Deep Sleep</string>
    <string name="max_cpu_freqs">Maximum CPU Freq: \t\t</string>
    <string name="min_cpu_freq">Minimum CPU Freq: \t\t</string>
    <string name="default_core_tunning">Core Tunning</string>
    <string name="litter_core_tunning">Litte core tunning</string>
    <string name="big_core_tunning">Big core tunning</string>
    <string name="time_in_state">Time in state</string>
    <string name="total_time_state">Total time states</string>
    <string name="unused_states">Unused States</string>
    <string name="default_core">Core Tunning</string>
    <string name="litter_core_title">Litte core</string>
    <string name="big_core_title">Big core</string>
    <string name="time_table_title">Time Table</string>
    <string name="basic_title">Basic</string>
    <string name="advance_title">Advance</string>
    <string name="cpu_info_title">CPU Info</string>
    <string name="kernel_info_title">Kernel Info</string>
    <string name="tunning">Tunning</string>
    <string name="current_gov">Current Governor</string>
    <string name="avai_governor">Available Governor</string>
    <string name="toast_set">Set %1$s successful</string>
    <string name="mpdecision">MPDecision</string>
    <string name="mpdecision_summary">Qualcomm\'s hotplugging solution. You might get problems with changing frequencies when this is enabled.</string>
    <string name="intelliplug">IntelliPlug</string>
    <string name="intelliplug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by faux123.</string>
    <string name="profile_summary">The number in the parentheses indicates the amount of cores online at any time.</string>
    <string name="balanced">Balanced</string>
    <string name="performance">Performance</string>
    <string name="conservative">Conservative</string>
    <string name="eco_performance">Eco Performance</string>
    <string name="eco_conservative">Eco Conservative</string>
    <string name="tri">Tri</string>
    <string name="eco">Eco</string>
    <string name="strict">Strict</string>
    <string name="eco_mode">Eco Mode</string>
    <string name="eco_mode_summary">Battery saving mode for IntelliPlug.</string>
    <string name="touch_boost">Touch Boost</string>
    <string name="touch_boost_summary">This will boost your minimum CPU speed if you touch the screen or press a button.</string>
    <string name="hysteresis">Hysteresis Value</string>
    <string name="hysteresis_summary">The lower it is, the faster response.</string>
    <string name="threshold">Threshold Value</string>
    <string name="debug">Debug</string>
    <string name="debug_summary">Allows you to activate debug mask for operations.</string>
    <string name="suspend">Suspend</string>
    <string name="suspend_summary">Prevent to suspend.</string>
    <string name="cpus_boosted">CPUs Boosted</string>
    <string name="cpus_boosted_summary">Maximum number of CPUs boosted at the same time.</string>
    <string name="min_cpu_online">Minimum CPU Online</string>
    <string name="min_cpu_online_summary">Minimum number of CPUs that will be always online.</string>
    <string name="max_cpu_online">Maximum CPU Online</string>
    <string name="max_cpu_online_summary">Maximum number of CPUs that will be always online.</string>
    <string name="max_cores_screen_off">Max Cores Screen Off</string>
    <string name="max_cores_screen_off_summary">Maximum number of cores online when screen is off.</string>
    <string name="suspend_defer_time">Suspend Defer Time</string>
    <string name="defer_sampling">Defer Sampling</string>
    <string name="boost_lock_duration">Boost Lock Duration</string>
    <string name="boost_lock_duration_summary">Minimum interval a CPU is boosted.</string>
    <string name="down_lock_duration">Down Lock Duration</string>
    <string name="down_lock_duration_summary">Minimum interval a CPU is kept online.</string>
    <string name="fshift">FShift</string>
    <string name="blu_plug">Blu_Plug</string>
    <string name="blu_plug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by Code_Blue team.</string>
    <string name="powersaver_mode">Powersaver Mode</string>
    <string name="powersaver_mode_summary">Sets 1 CPU maximum online with frequency @1728 MHz.</string>
    <string name="up_threshold">Up Threshold</string>
    <string name="up_threshold_summary">Over this threshold the driver will put one more core online.</string>
    <string name="up_timer_cnt">Up Timer Control</string>
    <string name="up_timer_cnt_summary">Control timer for up CPUs.</string>
    <string name="down_timer_cnt">Down Timer Control</string>
    <string name="down_timer_cnt_summary">Control timer for down CPUs.</string>
    <string name="msm_hotplug">MSM Hotplug</string>
    <string name="msm_hotplug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by myfluxi.</string>
    <string name="history_size">History Size</string>
    <string name="history_size_summary">Number of samples taken in consideration for average load across CPUs. Lower means quicker/more erratic.</string>
    <string name="update_rate">Update Rate</string>
    <string name="update_rate_summary">Interval between taking samples of load across CPUs. Lower means quicker/more erratic.</string>
    <string name="fast_lane_load">Fast Lane Load</string>
    <string name="fast_lane_load_summary">Improve latencies by instantly putting online all CPUs if current load on any CPU is above a certain threshold.</string>
    <string name="fast_lane_min_freq">Fast Lane Min Frequency</string>
    <string name="fast_lane_min_freq_summary">Sets the minimum frequency the CPU scales down to when fast lane reaches the above load.</string>
    <string name="offline_load">Offline Load</string>
    <string name="offline_load_summary">Don\'t offline a CPU if it drops under the lower levels up threshold load.</string>
    <string name="io_is_busy">IO is Busy</string>
    <string name="io_is_busy_summary">Used to make the hotplug consider the I/O time as CPU load time.</string>
    <string name="defer_time">Suspend Defer Time</string>
    <string name="mako_hotplug">Mako Hotplug</string>
    <string name="mako_hotplug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by franciscofranco.</string>
    <string name="cores_on_touch">Cores on touch</string>
    <string name="cores_on_touch_summary">Number of CPUs online when touching screen or pressing button.</string>
    <string name="cpu_freq_unplug_limit">CPU Frequency Unplug Limit</string>
    <string name="first_level">First Level</string>
    <string name="first_level_summary">The threshold to online all CPUs.</string>
    <string name="high_load_counter">High Load Counter</string>
    <string name="load_threshold">Load Threshold</string>
    <string name="load_threshold_summary">The threshold to online all CPUs.</string>
    <string name="max_load_counter">Max Load Counter</string>
    <string name="min_time_cpu_online">Min Time CPU Online</string>
    <string name="timer">Timer</string>
    <string name="msm_mpdecision_hotplug">MSM MPDecision Hotplug</string>
    <string name="bricked_hotplug">Bricked Hotplug</string>
    <string name="mb_hotplug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by show-p1984.</string>
    <string name="screen_off_single_core">Screen off Single Core</string>
    <string name="screen_off_single_core_summary">Use only one core when screen is off.</string>
    <string name="idle_frequency">Idle Frequency</string>
    <string name="idle_frequency_summary">If the first core is below this frequency, then don\'t plug the other cores.</string>
    <string name="touch_boost_time">Touch Boost Time</string>
    <string name="boost_frequecy_core">Boost Frequency Core %d</string>
    <string name="start_delay">Start delay</string>
    <string name="start_delay_summary">Time until Hotplug starts to work.</string>
    <string name="delay">Delay</string>
    <string name="delay_summary">Time between checks.</string>
    <string name="pause">Pause</string>
    <string name="pause_summary">If something else plugs in the CPU, fall asleep for this amount of time.</string>
    <string name="alucard_hotplug">Alucard Hotplug</string>
    <string name="alucard_hotplug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by Alucard.</string>
    <string name="sampling_rate">Sampling Rate</string>
    <string name="cpu_down_rate">CPU Down Rate</string>
    <string name="cpu_up_rate">CPU Up Rate</string>
    <string name="thunderplug">Thunderplug</string>
    <string name="thunderplug_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by varunchitre15.</string>
    <string name="min_cores_screen_off">Min Cores Screen Off</string>
    <string name="min_cores_screen_off_summary">Minimum number of cores online when screen is off.</string>
    <string name="endurance_level">Endurance Level</string>
    <string name="endurance_level_summary">A power saving profile.</string>
    <string name="quad_core_mode">Quad-Core mode</string>
    <string name="dual_core_mode">Dual-Core mode</string>
    <string name="zen_decision">Zen Decision</string>
    <string name="zen_decision_summary">An in-kernel replacement for Qualcomm\'s MPDecision. Developed by bbedward.</string>
    <string name="wake_wait_time">Wake Wait Time</string>
    <string name="wake_wait_time_summary">How long to wait before turning on any cores.</string>
    <string name="bat_threshold_ignore">Battery Threshold Ignore</string>
    <string name="battery_info">Battery Info</string>
    <string name="power_info">Power Info</string>
    <string name="start_record">Start Record</string>
</resources>