<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp">

    <TextView
        style="@style/header_style"
        android:text="@string/battery_info" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
      >

        <me.itangqi.waveloadingview.WaveLoadingView
            android:id="@+id/waveLoadingView"
            android:layout_width="0dp"
            android:layout_weight="5"            android:layout_height="wrap_content"
            app:mlv_borderWidth="1dp"
            app:mlv_shapeType="circle"
            app:mlv_titleCenterSize="12sp"
            app:mlv_waveAmplitude="50"
            app:mlv_waveColor="@color/color_primary" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/bat_vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/cpu_load"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bat_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/cpu_load"
            android:textSize="12sp" />
</LinearLayout>
    </LinearLayout>


    <TextView
        style="@style/header_style"
        android:text="@string/power_info" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
       >

        <me.itangqi.waveloadingview.WaveLoadingView
            android:id="@+id/reallv"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            app:mlv_borderWidth="1dp"
            app:mlv_shapeType="circle"
            app:mlv_titleCenterSize="12sp"
            app:mlv_titleTopSize="12sp"
            app:mlv_waveAmplitude="50"
            app:mlv_waveColor="@color/color_primary" />

<LinearLayout
    android:layout_width="0dp"
    android:layout_weight="5"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <TextView
            android:id="@+id/totalpower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/cpu_load"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/voltage_now_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/cpu_load"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/current_now_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/cpu_load"
            android:textSize="12sp"/>
</LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/header_style"
        android:text="Log files" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:dividerHeight="1px"
        android:id="@+id/lv_record_file"></ListView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"        android:layout_gravity="center_horizontal"

        android:gravity="center_horizontal">
    <Button
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:id="@+id/bt_start_record"
        android:text="@string/start_record"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>